--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
             </div>
         </header>
         <div class="PWS" id="PWS">
-            </div> <img src="PWSG.png" class="PWSG" alt="PWSWebSS"/> <img src="PWSG2.png" class="PWSG2" alt="PWSWebSS2"/> </div>
+            <div> <img src="PWSG.png" class="PWSG" alt="PWSWebSS"/> <img src="PWSG2.png" class="PWSG2" alt="PWSWebSS2"/> </div>
             <h3>Prework-Study-Guide Web Project</h3>
                 <p>
                     <h4>
@@ -32,9 +32,10 @@
                     </h4>
                     <ul>
                         <li>Descriptions and study material on HTML, CSS, Git, and JavaScript</li>
-                        <li>Educational imagery, and an interactive, manipulatable environment for the user</li>
+                        <li>Educational imagery with an interactive, manipulatable environment for the user</li>
                         <li>Clean text, organizational structure, console data, and personal customization abilities</li>
                     </ul>
+        </div>
 
                 </p>
             <div class="HRP" id="HRP">
