Foundational setup portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,8 @@
 
     <body>
         <header>
-            <h2><span class="name">Mr. Sullivan's </span>Developer Portfolio</h2>
-            <div>
+            <h1><span class="name">Mr. Sullivan's </span>Developer Portfolio</h1>
+            <div class="subheading">
                 <ul>
                     <li>
                         <a href="#HRP">Horiseon Refactor Project</a>
@@ -22,10 +22,11 @@
                 </ul>
             </div>
         </header>
-        <div class="PWS" id="PWS">
-            <div> <img src="PWSG.png" class="PWSG" alt="PWSWebSS"/> <img src="PWSG2.png" class="PWSG2" alt="PWSWebSS2"/> </div>
-            <h3>Prework-Study-Guide Web Project</h3>
-                <p>
+        <div class="content">
+            <div class="PWS" id="PWS">
+                <img src="PWSG.png" class="PWSG" alt="PWSWebSS"/>
+                <div class="PWScontent">
+                <h3>Prework-Study-Guide Web Project</h3>
                     <h4>
                         This project was developed to create a user-friendly experience for first-time code learners.
                         It contains the following elements:
@@ -34,15 +35,16 @@
                         <li>Descriptions and study material on HTML, CSS, Git, and JavaScript</li>
                         <li>Educational imagery with an interactive, manipulatable environment for the user</li>
                         <li>Clean text, organizational structure, console data, and personal customization abilities</li>
-                    </ul>
-        </div>
+                    </ul> 
+                </div>
+                <img src="PWSG2.png" class="PWSG2" alt="PWSWebSS2"/>
+            </div>
 
-                </p>
             <div class="HRP" id="HRP">
                 <img src="HRSN.png" class="HRSN" alt="HRSRFP"/>
                 <h3>Horiseon Refactor Project</h3>
                     <p>
-                        <h4>This is a Refactor project. Below contains details on specific editaion: </h4>
+                        <h4>This is a Refactor project. Below contains details on specific editations: </h4>
                         <ul>
                             <li>Debugged the site, click function was not working for head element, fixed this issue </li>
                             <li>Cleaned the code structure, organized the CSS elements in chronological fashion</li>
@@ -52,6 +54,7 @@
         
                     </p>
 
+            </div>
         </div>
     </body>
 
