--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="./portfolio.css"/>
         <meta charset="UTF-8" />
         <title> Noah Sullivan's Dev Portfolio</title>
-        <img src=""/>
     </head>
 
     <body>
@@ -24,7 +23,7 @@
         </header>
         <div class="content">
             <div class="PWS" id="PWS">
-                <img src="PWSG.png" class="PWSG" alt="PWSWebSS"/>
+                <img src="./PWSG.png" class="PWSG"/>
                 <div class="PWScontent">
                 <h3>Prework-Study-Guide Web Project</h3>
                     <h4>
@@ -37,11 +36,11 @@
                         <li>Clean text, organizational structure, console data, and personal customization abilities</li>
                     </ul> 
                 </div>
-                <img src="PWSG2.png" class="PWSG2" alt="PWSWebSS2"/>
+                <img src="./PWSG2.png" class="PWSG2"/>
             </div>
 
             <div class="HRP" id="HRP">
-                <img src="HRSN.png" class="HRSN" alt="HRSRFP"/>
+                <img src="./HRSN.png" class="HRSN"/>
                 <h3>Horiseon Refactor Project</h3>
                     <p>
                         <h4>This is a Refactor project. Below contains details on specific editations: </h4>
