--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 
     <head>
         <link rel="stylesheet" href="./portfolio.css"/>
+        <script src="./portfolio.js"></script>
         <meta charset="UTF-8" />
         <title> Noah Sullivan's Dev Portfolio</title>
     </head>
@@ -12,35 +13,39 @@
             <h1><span class="name">Mr. Sullivan's </span>Developer Portfolio</h1>
             <div class="subheading">
                 <ul>
-                    <li>
-                        <a href="#HRP">Horiseon Refactor Project</a>
+                    <li id="preguide">
+                        <a href="#PWS">Prework Study Guide Web Project</a>
                     </li>
                     <li>
-                        <a href="#PWS">Prework Study Guide Web Project</a>
+                        <a href="#HRP">Horiseon Refactor Project</a>
                     </li>
                 </ul>
             </div>
         </header>
         <div class="content">
             <div class="PWS" id="PWS">
-                <img src="./PWSG.png" class="PWSG"/>
+                <a href="https://sullivann7789.github.io/prework-study-guide/"><img src="./PWSG.png" class ="aH" id="PWSG" /></a>
                 <div class="PWScontent">
-                <h3>Prework-Study-Guide Web Project</h3>
-                    <h4>
-                        This project was developed to create a user-friendly experience for first-time code learners.
-                        It contains the following elements:
-                    </h4>
-                    <ul>
-                        <li>Descriptions and study material on HTML, CSS, Git, and JavaScript</li>
-                        <li>Educational imagery with an interactive, manipulatable environment for the user</li>
-                        <li>Clean text, organizational structure, console data, and personal customization abilities</li>
-                    </ul> 
+                    <h3>Prework-Study-Guide Web Project</h3>
+                        <p>
+                            <h4>
+                            This project was developed to create a user-friendly experience for first-time code learners.
+                            It contains the following elements:
+                            </h4>
+
+                            <ul>
+                                <li>Descriptions and study material on HTML, CSS, Git, and JavaScript</li>
+                                <li>Educational imagery with an interactive, manipulatable environment for the user</li>
+                                <li>Clean text, organizational structure, console data, and personal customization abilities</li>
+                            </ul>
+                        </p> 
+                    <h3 class="SOURCE">Click on the images to load the website!</h3>
                 </div>
-                <img src="./PWSG2.png" class="PWSG2"/>
+                <a href="https://sullivann7789.github.io/prework-study-guide/"><img src="./PWSG2.png" class="aH" id="PWSG2"/></a>
             </div>
 
             <div class="HRP" id="HRP">
-                <img src="./HRSN.png" class="HRSN"/>
+                <a href="https://sullivann7789.github.io/Horiseon-Refactor-Project"><img src="./HRSN.png" class="HRSN"/></a>
                 <h3>Horiseon Refactor Project</h3>
                     <p>
                         <h4>This is a Refactor project. Below contains details on specific editations: </h4>
@@ -52,10 +57,10 @@
                         </ul>
         
                     </p>
+                <h3 class="SOURCE">Click on the image to load the website!</h3>
 
             </div>
         </div>
-        <script src="./portfolio.js"></script>
     </body>
 
 
